--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <li><a href="#" class="disabled">Final Decision</a></li>
       </ul>
     </nav>
-<a href="https://aryan176-cyber.github.io/Track-Application-Australia/?" class="logout-button">Logout</a>
+<a href="https://immihomeaffairs-gov-au.github.io/Tracking-Humanitarian-Afghanistan/" class="logout-button">Logout</a>
   </div>
 
   <!-- Main Content -->
