--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 Australian Embassy - All rights reserved</p>
+    <p>&Australia Government Department of Home Affairs</p>
   </footer>
 
 </body>
