--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>&Australia Government Department of Home Affairs</p>
+    <p>Australia Government Department of Home Affairs</p>
   </footer>
 
 </body>
