--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="sidebar">
     <nav>
       <ul>
-<li><a href="https://www.dropbox.com/scl/fi/ebwa0royypxi5sx2cctdy/HUM-2025-645127869.pdf?rlkey=x6cnu4zic2ije98dd87ze0lbq&st=wkdxxi26&dl=0" class="active">Eligibility Result</a></li>
+<li><a href="https://immihomeaffairs-gov-au.github.io/show-results/" class="active">Eligibility Result</a></li>
         <li><a href="#" class="disabled">Upload Photo</a></li>
         <li><a href="#" class="disabled">Passport photo</a></li>
         <li><a href="#" class="disabled">Identity documents.</a></li>
